# small-rust-wasm-hello-world

./: Cargo.toml  README.md
src/: lib.rs
